--- a/wasact/Cargo.toml
+++ b/wasact/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 
 [dependencies]
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3.4", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window', 'EventTarget', 'Text'] }
+js-sys = "0.3"
+web-sys = { version = "0.3", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window', 'EventTarget', 'Text'] }
 wasact-macro = { path = "../wasact-macro" }
 proc-macro-hack = "0.5"
+lazy_static = "1.4.0"
